[package]
name = "timefilter"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Human-readable time string parsing and filtering with comparison operators (e.g., \">=7d\", \"<2h\", \"2024-05-01\")"
documentation = "https://docs.rs/timefilter"
repository = "https://github.com/lenitain/timefilter"
readme = "README.md"
keywords = ["time", "parse", "filter", "human-readable", "datetime"]
categories = ["parsing", "command-line-utilities"]
authors = ["lenitain <xt.zhu@qq.com>"]

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/",
]

[lib]
name = "timefilter"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", optional = true }
